--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,60 @@
 <classpath>
 	<classpathentry kind="src" output="target/classes" path="src/main/java"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="D:/selenium-java-2.53.1/selenium-2.53.1/libs/selenium-java-2.53.1.jar"/>
 	<classpathentry kind="lib" path="D:/selenium-java-2.53.1/selenium-2.53.1/libs/selenium-java-2.53.1-srcs.jar"/>
 	<classpathentry kind="lib" path="D:/selenium-server-standalone-2.53.0.jar"/>
 	<classpathentry kind="lib" path="D:/selenium-java-2.53.1/selenium-2.53.1/libs/testng-6.9.9.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/apache-mime4j-0.6.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/guava-19.0.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/httpclient-4.5.1.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/httpcore-4.4.3.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/httpmime-4.5.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/netty-3.5.7.Final.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/phantomjsdriver-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/selenium-java-2.53.1.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/selenium-java-2.53.1-srcs.jar"/>
+	<classpathentry kind="lib" path="D:/my_workspace/Selenium_demo/lib/testng-6.9.9.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/alt-rt.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/charsets.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/deploy.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/javaws.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/jce.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/jfr.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/jfxrt.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/jsse.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/management-agent.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/plugin.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/resources.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/rt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/commons-codec/commons-codec/1.5/commons-codec-1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/org/apache/poi/poi-ooxml-schemas/3.9/poi-ooxml-schemas-3.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/org/apache/xmlbeans/xmlbeans/2.3.0/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/org/apache/poi/poi-scratchpad/3.9/poi-scratchpad-3.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/org/apache/poi/ooxml-schemas/1.1/ooxml-schemas-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SIT/.m2/repository/org/apache/poi/openxml4j/1.0-beta/openxml4j-1.0-beta.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-3.17-20170915/poi-3.17/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-3.17-20170915/poi-3.17/poi-examples-3.17.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-3.17-20170915/poi-3.17/poi-excelant-3.17.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-3.17-20170915/poi-3.17/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-3.17-20170915/poi-3.17/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-3.17-20170915/poi-3.17/poi-scratchpad-3.17.jar"/>
+	<classpathentry kind="lib" path="D:/commons-collections4-4.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
